2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Split out bspstart contents. Use shared stub for
	bsp_start.
	* startup/h8bdinstallirq.c: New file.
	* startup/bspstart.c: Removed.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary boilerplate comments.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, startup/linkcmds: Use top level shared
	bsp_get_work_area() implementation.
	* startup/bspgetworkarea.c: Removed.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspstart.c: Remove unnecessary includes of
	rtems/libcsupport.h and rtems/libio.h.

2008-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, startup/__main.c, startup/bspstart.c:
	Split out bsp_get_work_area() into its own file and user BSP
	Framework to perform more initialization.
	* startup/bspgetworkarea.c: New file.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-08-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/__main.c: Add missing prototypes.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the